2017-11-06 Magnus Hagdorn
 * piccolo2/precord.py: add option to print version
 * piccolo2/ptriggered.py: ditto and rename

2017-11-06 Magnus Hagdorn
 * piccolo2/client/__init__.py: set __version__
 * setup.py: get version from hg tag

2017-02-22 Magnus Hagdorn
 * piccolo2/client/PiccoloBaseClient.py: the client requests and stores a 
   listener ID which is used for client specific messages
 
2017-02-14 Magnus Hagdorn
 * piccolo2/client/PiccoloBaseClient.py: when requesting status turn result 
   into a status object

2017-02-13 Magnus Hagdorn
 * piccolo2/precord.py: add simple program to record spectra
 * setup.py: add new program

2016-05-17 Magnus Hagdorn
 * piccolo2/client/PiccoloXbeeClient.py: do not die if hardware module is not
   available

2016-04-29 Magnus Hagdorn
 * piccolo2/client/PiccoloXbeeClient.py: add timeout

2016-04-29 Magnus Hagdorn
 * piccolo-client.py: tidy up
 * piccolo2/client/PiccoloBaseClient.py: always return a SpectraList object
   when the getSpectra command is called

2016-04-29 Magnus Hagdorn
 * piccolo-client.py: add option to try downloading spectra
 * piccolo2/client/PiccoloXbeeClient.py: handle incoming spectra specially by
   caching the spectra and checking for new commands after each chunk has been
   received

2016-04-28 Magnus Hagdorn
 * piccolo2/client/PiccoloXbeeClient.py: move xbee communication into a separate
   thread

2016-04-27 Magnus Hagdorn
 * piccolo-client.py: add logging
 * piccolo2/client/PiccoloXbeeClient.py: use new block read/write xbee methods

2016-04-27 Magnus Hagdorn
 * piccolo-client.py: add option to use xbee client
 * piccolo2/client/__init__.py: import xbee client
 * piccolo2/client/PiccoloXbeeClient.py: first go at implementing xbee client

2016-04-06 Magnus Hagdorn
 * README.md: updated
 * setup.py: add metadata

2016-04-06 Magnus Hagdorn
 * started ChangeLog
 * use setuptools
 * piccolo2/client/__init__.py: rename module to import
 * piccolo-client.py: ditto